@@ -1,3 +1,12 @@
+2008-09-21  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
+	* src/Application.cs: If there's a valid backend that fails to
+	  authenticate, retry instead of just showing the preferences window.
+	   Fixes bug #538019, patch courtesy of Joseph Method and Andrew
+	  Conkling.
+	* src/Backends/Rtm/RtmBackend.cs: More informative exception handling
+	  during authentication.
+
 2008-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* src/TaskWindow.cs: Don't paint the background of the status bar white
